# RecurrenceResearch

./: fetch_fineweb.py  hawk.py  hawkeu.py  loader.py  main.py  main2.py  mamba.py  mambaeu.py  model.py  mqar.py  pyproject.toml
