[project]
name = "your-ml-repo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "axiom",
    "flax>=0.12.4",
    "optax",
    "orbax-checkpoint",
    "datasets>=2.18.0",
    "gcsfs>=2024.2.0",
    "numpy",
    "wandb",
    "mamba2-jax",
]

[tool.uv.sources]
axiom = { git = "https://github.com/Adam-Jacuch/Axiom.git" }
mamba2-jax = { git = "https://github.com/Adam-Jacuch/mamba2-jax-recurrence.git" }

[dependency-groups]
local = ["jax[cpu]"]
tpu = ["jax[tpu]"]
